# spanpanel

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: log.md  research.md
tests/: test_spanpanel.py
